# Kiklet

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/autostart/: macos.rs  mod.rs  windows.rs
src-tauri/src/deliver/: macos.rs  mod.rs  windows.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/hotkey_ptt/: macos.rs  mod.rs  windows.rs
src-tauri/src/hotkey_tracker/: macos.rs  mod.rs  windows.rs
src-tauri/src/hud/: macos.rs  mod.rs
src-tauri/src/modifier_hotkey/: macos.rs  mod.rs  windows.rs
src-tauri/src/openai/: mod.rs
src-tauri/src/perm/: macos.rs  mod.rs  windows.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: mod.rs
